# prolog_in_ocaml

./: .ocamlformat  dune  dune-project
_build/: .db  .digest-db  log
_build/default/: README.md  prolog_in_ocaml.dune-package
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: prolog_in_ocaml.ml-gen
_build/default/lib/.merlin-conf/: lib-prolog_in_ocaml
_build/default/lib/.prolog_in_ocaml.objs/: prolog_in_ocaml__Ast.impl.all-deps
_build/default/lib/.prolog_in_ocaml.objs/byte/: prolog_in_ocaml.cmi  prolog_in_ocaml.cmo  prolog_in_ocaml.cmt  prolog_in_ocaml__Ast.cmi  prolog_in_ocaml__Ast.cmo  prolog_in_ocaml__Ast.cmt
_build/default/lib/.prolog_in_ocaml.objs/native/: prolog_in_ocaml.cmx  prolog_in_ocaml__Ast.cmx
_build/default/test/.merlin-conf/: exe-prolog_in_ocaml
_build/default/test/.prolog_in_ocaml.eobjs/byte/: dune__exe__Prolog_in_ocaml.cmi  dune__exe__Prolog_in_ocaml.cmti
_build/default/test/.prolog_in_ocaml.eobjs/native/: dune__exe__Prolog_in_ocaml.cmx
_build/install/default/lib/prolog_in_ocaml/: META  dune-package  opam
lib/: ast.ml  common.ml  dune  eval.ml  lexer.mll  parser.mly  repl.ml
test/: dune
